--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "lucide-react": "^0.509.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router": "^7.6.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "parcel": "^2.14.4"
