--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.14.4"
   }
 }
