--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "buffer": "^6.0.3",
     "parcel": "^2.14.4"
   }
