--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "browserslist": "^4.24.5",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -25,5 +26,9 @@
     "autoprefixer": "^10.4.21",
     "buffer": "^6.0.3",
     "parcel": "^2.14.4"
-  }
+  },
+  "browserslist": [
+    "defaults and fully supports es6-module",
+    "maintained node versions"
+  ]
 }
