--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "jest"
+    "test": "jest",
+    "proxy": "parcel index.html --proxy http://localhost:1234"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "browserslist": "^4.24.5",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^6.22.0"
   },
