--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "type": "module",
   "scripts": {
     "start": "parcel index.html",
+    "dev": "parcel index.html",
     "build": "parcel build index.html",
     "test": "jest",
     "proxy": "parcel index.html --proxy http://localhost:1234"
@@ -26,8 +27,14 @@
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@testing-library/react": "^16.3.0",
     "autoprefixer": "^10.4.21",
+    "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.14.4"
   },
   "browserslist": [
