--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@parcel/babel-plugin-transform-runtime": "^2.15.1",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.14.4"
