--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "dev": "parcel index.html",
     "build": "parcel build index.html",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:coverage:watch": "jest --coverage --watch",
     "proxy": "parcel index.html --proxy http://localhost:1234"
   },
   "dependencies": {
@@ -39,6 +42,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "parcel": "^2.14.4"
   },
   "browserslist": [
